--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">This is me</a></li>
+								<li><a href="#news">News</a></li>
 								<li><a href="#work">Papers</a></li>
 								<li><a href="#about">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -68,6 +69,17 @@
 
 							</article>
 
+						<!-- News -->
+						<article id="news">
+							<h2 class="major">News</h2>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+			
+							<p> WORK IN PROGRESS!</p>
+							<p> </p>
+
+
+
+
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Papers</h2>
@@ -79,10 +91,12 @@
 								
 
 
+
 							<h2><b>2024</b></h2>
 
 								Papers ongoing, stay tuned!
 								
+
 
 							<h2><b>2023</b></h2>
 
